# Longshen-Weeder

./: .gitignore  .gitmodules  CONTEXT.md  PLAN_MISMATCHES.md  PROGRESS.md  VERIFY.md  plan.md
src/chassis_bridge/: CMakeLists.txt  package.xml
src/chassis_bridge/proto/: muses.proto
src/chassis_bridge/src/: chassis_bridge_node.cpp
src/plant_depth/: CMakeLists.txt  package.xml
src/plant_depth/src/: plant_depth_node.cpp
src/plant_depth/test/: depth.test  depth_test.cpp
src/plant_detection/: CMakeLists.txt  package.xml
src/plant_detection/src/: plant_detection_node.cpp
src/plant_msgs/: CMakeLists.txt  package.xml
src/plant_msgs/msg/: PlantDetection.msg  PlantDetectionArray.msg  PlantPoint.msg  PlantTrack.msg
src/plant_tracking/: CMakeLists.txt  package.xml
src/plant_tracking/src/: plant_tracking_node.cpp
src/plant_tracking/test/: tracking.test  tracking_test.cpp
src/serial_bridge/: CMakeLists.txt  package.xml
src/serial_bridge/src/: serial_bridge_node.cpp
src/weed_bringup/: CMakeLists.txt  package.xml
src/weed_bringup/config/: arm_workspace.yaml  camera.yaml  chassis.yaml  depth.yaml  detector.yaml  serial.yaml  tf_camera_to_arm.yaml  tracker.yaml
src/weed_bringup/launch/: arm.launch  bringup.launch  camera.launch  chassis.launch  perception.launch  tf.launch
src/weed_decision/: CMakeLists.txt  package.xml
src/weed_decision/src/: weed_decision_node.cpp
src/weed_decision/test/: decision.test  decision_test.cpp
src/weed_monitor/: CMakeLists.txt  package.xml
src/weed_monitor/src/: weed_monitor_node.cpp
src/weed_monitor/test/: monitor.test  monitor_test.cpp
src/weed_robot/: CMakeLists.txt  package.xml
src/weed_tf/: CMakeLists.txt  package.xml
src/weed_tf/src/: weed_tf_node.cpp
src/weed_tf/test/: tf.test  tf_test.cpp
