<?xml version="1.0"?>
<package format="2">
  <name>chassis_bridge</name>
  <version>0.1.0</version>
  <description>TCP bridge for the RTK chassis controller.</description>

  <maintainer email="154001438+RE-TikaRa@users.noreply.github.com">RE-TikaRa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>protobuf</exec_depend>
</package>
