<?xml version="1.0"?>
<package format="2">
  <name>plant_depth</name>
  <version>0.1.0</version>
  <description>RGB-D target point calculation for weed targets.</description>

  <maintainer email="154001438+RE-TikaRa@users.noreply.github.com">RE-TikaRa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>plant_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rostest</test_depend>
</package>
