<?xml version="1.0"?>
<package format="2">
  <name>serial_bridge</name>
  <version>0.1.0</version>
  <description>UART bridge for ESP32-S3 arm control.</description>

  <maintainer email="154001438+RE-TikaRa@users.noreply.github.com">RE-TikaRa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <depend>plant_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>boost</exec_depend>
</package>
